<resources>
    <string name="app_name">Proyecto</string>
    <string name="peque_os_emprendedores">Pequeños emprendedores</string>
    <string name="ecolomagic">EcoloMagic</string>
    <string name="construmoon">ConstruMoon</string>
    <string name="contamos_con_el_mejor_personal_para_construir_las_casas_de_sus_sue_os_a_los_mejores_precios">Contamos con el mejor personal para construir las casas de sus sueños a los mejores precios</string>
    <string name="dogpic">DogPic</string>
    <string name="realizamos_los_mejores_helados_para_mascotas_con_los_mejores_productos_para_nuestros_favoritos">Realizamos los mejores helados para mascotas con los mejores productos para nuestros favoritos</string>
    <string name="bioloves">BioloVes</string>
    <string name="confeccionamos_casas_para_pajaritos_de_tama_o_que_lo_solicite_para_darle_una_mejor_vida_a_sus_mascotas_que_tanto_quiere">Confeccionamos casas para pajaritos de tamaño que lo solicite para darle una mejor vida a sus mascotas que tanto quiere</string>
    <string name="tenemos_productos_que_ayudan_al_ambiento_como_cepillos_de_bambu_personalizados_entre_otras_cosas">Tenemos productos que ayudan al ambiento como cepillos de bambu personalizados entre otras cosas</string>
    <string name="todo">TODO</string>
    <string name="todo">TODO</string>
    <string name="todo">TODO</string>
    <string name="todo">TODO</string>
    <string name="todo">TODO</string>
    <string name="todo">TODO</string>
    <string name="todo">TODO</string>
    <string name="todo">TODO</string>
    <string name="todo">TODO</string>
    <string name="todo">TODO</string>
    <string name="todo">TODO</string>
    <string name="contacto">Contacto</string>
    <string name="registro">REGISTRO</string>
    <string name="inicia_sesion">INICIA SESION</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="quienes_somos">Quienes Somos?!</string>
    <string name="todo">TODO</string>
    <string name="mientras_mas_ideas_tengas_para_mejorar_tus_productos_y_ofertas_mas_oportunidades_hay_de_triunfar">Mientras mas ideas tengas para mejorar tus productos y ofertas mas oportunidades hay de triunfar</string>
    <string name="nos_preocupamos_por_que_tus_ingresos_siempre_vayan_en_aumento_y_que_estes_motivado">Nos preocupamos por que tus ingresos siempre vayan en aumento y que estes motivado</string>
    <string name="te_ayudamos_y_ense_amos_como_impulsar_tus_negocios_de_la_mejor_manera">Te ayudamos y enseñamos como impulsar tus negocios de la mejor manera</string>
    <string name="todo">TODO</string>
    <string name="todo">TODO</string>
    <string name="todo">TODO</string>
    <string name="resgistro_gratis_para_mejorar_su_negocio">Resgistro Gratis Para Mejorar Su Negocio</string>
    <string name="registrarse">Registrarse</string>
    <string name="nombre_completo">Nombre Completo</string>
    <string name="contrase_a">Contraseña</string>
    <string name="registrarse_con_google">Registrarse Con Google</string>
    <string name="registrarse_con_facebook">Registrarse con Facebook</string>
    <string name="registrarse_con_correo_electronico">Registrarse Con Correo Electronico</string>
    <string name="email">Email</string>
</resources>